Add support for stored action values.